overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Roboto";
+	overflow-x: hidden;
 }
